apps/open-webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-dp
  namespace: open-webui
  labels:
    app: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      hostNetwork: true
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:v0.9.5
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: open-webui-data
              mountPath: /app/backend/data
      volumes:
        - name: open-webui-data
          hostPath:
            path: /mnt/ssd/app-data/open-webui/data
            type: DirectoryOrCreate
