apps/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: cloudflare-issuer
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        traefik.ingress.kubernetes.io/router.middlewares: infrastructure-redirect-https@kubernetescrd
    name: open-webui-ingress
    namespace: open-webui
spec:
    rules:
        - host: ENC[AES256_GCM,data:p0/Npo64vHeg4kTsrVFNdUsMUUIZyyWtW1kzygcQ,iv:IY5IPWg0A9roe23tFqVFWWSX7muBujyB3V9mxgUw6EQ=,tag:9+R+VRUO0OyX9f5oJvbciQ==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: open-webui-svc
                        port:
                            number: 8080
    tls:
        - hosts:
            - ENC[AES256_GCM,data:aneFdLIGDdW3rAtqNfcdrQs2OPsJeM2o9SFfvlru,iv:4nhQXc/DDnpltGfo4GWU+hahw0WLwWSmnLs57Sdo33g=,tag:0cwg/DsDqvT8UCBJTgokwQ==,type:str]
          secretName: open-webui-cert
sops:
    lastmodified: "2026-05-19T19:54:09Z"
    mac: ENC[AES256_GCM,data:gd0y8XJrIFBxClzESUMcFYrGyd8p8jKAsyXGf7IkvGGs664ziWmG9s4c9Jebt/P9LO7fCbAUN89i8VsdXCpB9zUxJz8G/G1+m54cTcx1RDEkYJIrkBMgWUbSgMH0nsXC/fzpZFKjFi83UQqQoJRkgidtTBiXfN7xt0KrUgdLJyc=,iv:83hymuX68TWZb9NRtEnGVcckhWGMIyPbxvKFuXhSm60=,tag:my+HFPEsbTeKV+bOSXTeuA==,type:str]
    pgp:
        - created_at: "2026-05-19T19:54:09Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA1R72LzcpgpmAQ//XKfzM8dVrdNBLoaZ6kzsHwFhUoox8ovqMaZ+NRf8U/OH
[...]
            mKrvgbpXbXj9GG660OWhUm4aeOnbqR0xQYTT4LyD5sEjng==
            =iIs9
            -----END PGP MESSAGE-----
          fp: 08083A92DBB719D2E10998259B44720A645D6802
    encrypted_regex: ^(data|stringData|email|apiToken|host|hosts)$
    version: 3.12.2
